--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "@iconify-json/lucide": "^1.2.26",
     "@iconify-json/simple-icons": "^1.2.24",
     "@nuxt/ui": "3.0.0-alpha.12",
-    "nuxt": "^3.15.4",
-    "tailwindcss": "4.0.7",
-    "@tailwindcss/postcss": "4.0.7",
-    "@tailwindcss/vite": "4.0.7"
+    "nuxt": "^3.15.4"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.0.1",
