--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@iconify-json/lucide": "^1.2.26",
     "@iconify-json/simple-icons": "^1.2.24",
-    "@nuxt/ui": "3.0.0-beta.3",
+    "@nuxt/ui": "3.0.0",
     "nuxt": "^3.15.4"
   },
   "devDependencies": {
