--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@iconify-json/lucide": "^1.2.26",
     "@iconify-json/simple-icons": "^1.2.24",
     "@nuxt/ui": "3.0.0",
-    "nuxt": "^3.15.4"
+    "nuxt": "^3.15.4",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@nuxt/content": "^3.5.1",
     "@nuxt/eslint": "^1.0.1",
+    "@nuxtjs/color-mode": "^3.5.2",
     "eslint": "^9.20.1",
     "typescript": "^5.7.3"
   }
