--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.26",
-    "@iconify-json/simple-icons": "^1.2.24",
+    "@nuxt/icon": "^1.12.0",
     "@nuxt/ui": "3.0.0",
     "nuxt": "^3.15.4",
     "sqlite3": "^5.1.7"
