--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxt/icon": "^1.12.0",
+    "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "3.0.0",
     "nuxt": "^3.15.4",
     "sqlite3": "^5.1.7"
