--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/icon": "^1.12.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "3.0.0",
+    "better-sqlite3": "^11.10.0",
     "nuxt": "^3.15.4",
     "sqlite3": "^5.1.7"
   },
